--- a/vscode-portfolio/src/styles/UX-UI/uxui-main.css
+++ b/vscode-portfolio/src/styles/UX-UI/uxui-main.css
@@ -91,48 +91,6 @@ footer::before {
   z-index: -1;
 }
 
-/* All decoration and behavior removed from anchors */
-a {
-  text-decoration: none;
-  /* Remove underlines */
-  color: inherit;
-  /* Inherit color from parent */
-  cursor: pointer;
-  /* Change cursor to pointer on hover */
-}
-
-a:visited {
-  color: inherit;
-  /* Inherit color from parent, even after link is visited */
-}
-
-a:hover,
-a:focus {
-  text-decoration: none;
-  /* Remove underlines on hover/focus */
-  outline: none;
-  /* Remove outline on focus */
-}
-
-/* Remove all list styling */
-ul,
-ol {
-  list-style-type: none;
-  /* Remove bullet points or numbers */
-  padding: 0;
-  /* Remove padding */
-  margin: 0;
-  /* Remove margin */
-}
-
-li {
-  padding: 0;
-  /* Remove padding */
-  margin: 0;
-  /* Remove margin */
-}
-
-
 
 /* Mobile styles
 ==========================================
@@ -142,7 +100,7 @@ li {
   margin: auto;
 }
 
-.App {
+.ux-ui {
   display: flex;
   flex-direction: column;
   align-items: center;
